# AI4Reproducibility

./: .gitignore  AGENTS.md  CHECKLIST.md  CITATION.cff  CQV_CHECKLIST.md  LOGIC.md  README.md  checklist.schema.json  checklist.yaml  cqv_checklist.schema.json  cqv_checklist.yaml  cqv_output.schema.json  prepare_review.sh  pyproject.toml  validate_review.sh
.github/workflows/: ci.yml  docker.yml
.kilocode/workflows/: ai4r.md
agents/code-quality-verification/: SKILL.md
agents/code-quality-verification/assets/: REPORT_TEMPLATE.md  REVIEW_TEMPLATE.md
agents/code-quality-verification/references/: ANTI_PATTERNS.md  CHECKLIST.md  PERFORMANCE_REVIEW.md  REPRODUCIBILITY.md  SECURITY_REVIEW.md  STATIC_ANALYSIS.md  STATISTICAL_VALIDATION.md  STYLE_GUIDE.md  TESTING_GUIDE.md  TOOLING.md
agents/critique/: SKILL.md
agents/critique/references/: CATEGORIES.md
agents/experimental-run/: SKILL.md
agents/knowledge-base-extraction/: SKILL.md
agents/knowledge-base-extraction/biostat/: COMMON_PITFALLS.md  EXTRACTION_TEMPLATE.md  METRICS_AND_VALIDATION.md  ONTOLOGY.md  REPRODUCIBILITY_CHECKLIST.md  STATISTICAL_RISKS.md  STUDY_DESIGN_PATTERNS.md
agents/review/: SKILL.md
agents/review/assets/: review-template.md
agents/review/references/: CHECKLIST.md  full-audit-checklist.md
assets/: diagram.py  execute_workflow.sh
docker/: Dockerfile
tests/: test_calibrate_stat.py  test_checklist_integrity.py  test_cqv.py  test_cqv_stat.py  test_critique.py  test_er.py  test_er_artifacts.py  test_er_docker_compare.py  test_er_preflight.py  test_kbe.py  test_kbe_extract.py  test_orchestrator_llm.py  test_reconcile.py  test_review.py  test_run.py  test_stage.py  test_stat_evidence.py  test_stat_judges.py  test_static_checks.py  test_tool_specs.py
tests/fixtures/: smoke_test_cqv.json  smoke_test_kbe.json
tests/fixtures/static_checks/clean_repo/: README.md  main.R  main.py  requirements.txt
tests/fixtures/static_checks/clean_repo/R/: helpers.R
tests/fixtures/static_checks/dirty_repo/: analysis.R  untitled copy 2.py
tools/: checklist_render.py  tools.py
tools/cqv_agent/: auto_extract_zip.py  extract_zip.py  get-dependencies.py  get_dependencies.py  list-files.py  read-file.py
tools/cqv_agent/static_checks/: __init__.py  _common.py  _stubs.py  check_r_ast.py  danger_patterns.py  dispatch.py  file_inventory.py  heuristics_cross_lang.py  path_checks.py  r_heuristics.py
tools/er_agent/: create-file.py  evaluate_results.py  launch-env.py  launch_env.py
tools/kbe_agent/: clean-text.py  clean_pdf_text.py  pdf2text.py
tools/orchestrator/: __init__.py  _stage.py  calibrate_stat.py  config.py  cqv.py  critique.py  er.py  er_artifacts.py  er_compare.py  er_docker.py  er_preflight.py  kbe.py  kbe_extract.py  llm.py  reconcile.py  review.py  run.py  stat_evidence.py  stat_judges.py  tool_specs.py
tools/review_agent/: validate_outputs.py
